+'d added sidebar "a" & css prop , fixed trans error, added flex prop and margin prop. Added dark mode toggle.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,10 @@
     --text-color: #b41189;
 
     /* === Transition ===*/
-    --tran-03: 0.2 sease;
-    --tran-03: 0.3 sease;
-    --tran-04: 0.4 sease;
-    --tran-05: 0.5 sease;
+    --tran-03: 0.2s ease;
+    --tran-03: 0.3s ease;
+    --tran-04: 0.4s ease;
+    --tran-05: 0.5s ease;
 }
 
 body {
@@ -31,6 +31,8 @@ body {
 }
 /* ==== Reusable CSS ==== */
 .sidebar .icon{
+    display: flex;
+    align-items: center;
     font-size: 16px;
     font-weight: 500;
 }
@@ -57,6 +59,7 @@ body {
     display: flex;
     align-items: center;
     padding: 0;
+    
 }
 
 .sidebar li .icon{
@@ -67,8 +70,19 @@ body {
     padding-left: 10px;
 }
 
+.sidebar li a{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 15px;
+    text-decoration: none;
+}
+
 .sidebar header{
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .sidebar .icon img {
     width: 40px;
@@ -89,10 +103,12 @@ header .icon .header-text{
     font-weight: 600;
     font-family: "Luckiest Guy", cursive;;
     color: #000000;
+    margin-left: 20px;
 
 }
 .header-text .profession{
     margin-top: -2px;
+    margin-left: 20px;
     
 }
 .sidebar header .toggle {
@@ -115,7 +131,9 @@ header .icon .header-text{
     height: 100%;
     display: flex;
     align-items: center;
+    text-decoration: none;
     color: #FBF6E9;
+    transition: var(--tran-04);
 }
 
 .sidebar li a:hover{
@@ -233,3 +251,67 @@ header .icon .header-text{
     -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
     -webkit-transition-delay: 9999s;
   }
+
+  /* Bottom content - Dark/Light Toggle Switch */
+  .toggle-switch {
+    position: relative;
+    width: 100px;
+    height: 50px;
+    --light: #d8dbe0;
+    --dark: #28292c;
+    --link: rgb(27, 129, 112);
+    --link-hover: rgb(24, 94, 82);
+  }
+  
+  .switch-label {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: var(--dark);
+    border-radius: 25px;
+    cursor: pointer;
+    border: 3px solid var(--dark);
+  }
+  
+  .checkbox {
+    position: absolute;
+    display: none;
+  }
+  
+  .slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  
+  .checkbox:checked ~ .slider {
+    background-color: var(--light);
+  }
+  
+  .slider::before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    -webkit-box-shadow: inset 12px -4px 0px 0px var(--light);
+    box-shadow: inset 12px -4px 0px 0px var(--light);
+    background-color: var(--dark);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  
+  .checkbox:checked ~ .slider::before {
+    -webkit-transform: translateX(50px);
+    -ms-transform: translateX(50px);
+    transform: translateX(50px);
+    background-color: var(--dark);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  
